fix: Bottom spacing fix tags (#117)

--- a/blocks/aside/aside.css
+++ b/blocks/aside/aside.css
@@ -80,3 +80,7 @@
   border-bottom: 2px solid #004dff;
   line-height: 35px;
 }
+
+.section.aside-container {
+  padding-bottom: 0;
+}
